--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,22 @@
-Flask==1.1.4
-Werkzeug==1.0.1
-PyMySQL==1.0.2
-bcrypt==3.2.2
-PyJWT==2.4.0
-python-dotenv==0.19.2
-requests==2.26.0
-google-auth==2.6.0
-google-auth-oauthlib==0.5.1
-google-api-python-client==2.41.0
-stripe==3.5.0
-Pillow==8.3.2
+Flask==2.3.3
+Werkzeug==2.3.7
+PyMySQL==1.1.0
+bcrypt==4.0.1
+PyJWT==2.8.0
+python-dotenv==1.0.0
+requests==2.31.0
+google-auth==2.23.0
+google-auth-oauthlib==1.1.0
+google-api-python-client==2.100.0
+stripe==6.5.0
+Pillow==10.0.1
 pywebpush==1.14.0
-cryptography==3.4.8
-marshmallow==3.14.1
-email-validator==1.1.3
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-click==7.1.2
-gunicorn==20.1.0
+cryptography==41.0.4
+marshmallow==3.20.1
+email-validator==2.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+click==8.1.7
+gunicorn==21.2.0
+flask-cors==4.0.0
