--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
-Flask==2.3.3
-Werkzeug==2.3.7
-PyMySQL==1.1.0
-bcrypt==4.0.1
-PyJWT==2.8.0
-python-dotenv==1.0.0
-requests==2.31.0
-google-auth==2.23.0
-google-auth-oauthlib==1.1.0
-google-api-python-client==2.100.0
-stripe==6.5.0
-Pillow==10.0.1
-pywebpush==1.14.0
-cryptography==41.0.4
-marshmallow==3.20.1
-email-validator==2.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-click==8.1.7
-gunicorn==21.2.0
-flask-cors==4.0.0
+Flask>=2.0.0,<3.0.0
+Werkzeug>=2.0.0,<3.0.0
+PyMySQL>=1.0.0
+bcrypt>=4.0.0
+PyJWT>=2.0.0
+python-dotenv>=0.19.0
+requests>=2.27.0
+google-auth>=2.0.0
+google-auth-oauthlib>=0.5.0
+google-api-python-client>=2.0.0
+stripe>=5.0.0
+Pillow>=9.0.0
+pywebpush>=1.14.0
+cryptography>=40.0.0
+marshmallow>=3.0.0
+email-validator>=1.3.0
+itsdangerous>=2.0.0
+Jinja2>=3.0.0
+MarkupSafe>=2.0.0
+click>=8.0.0
+gunicorn>=20.0.0
+flask-cors>=3.0.0
