--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,6 @@
-Flask>=2.0.0,<3.0.0
-Werkzeug>=2.0.0,<3.0.0
-PyMySQL>=1.0.0
-bcrypt>=4.0.0
-PyJWT>=2.0.0
-python-dotenv>=0.19.0
-requests>=2.27.0
-google-auth>=2.0.0
-google-auth-oauthlib>=0.5.0
-google-api-python-client>=2.0.0
-stripe>=5.0.0
-Pillow>=9.0.0
-pywebpush>=1.14.0
-cryptography>=40.0.0
-marshmallow>=3.0.0
-email-validator>=1.3.0
-itsdangerous>=2.0.0
-Jinja2>=3.0.0
-MarkupSafe>=2.0.0
-click>=8.0.0
-gunicorn>=20.0.0
-flask-cors>=3.0.0
+Flask
+PyMySQL
+bcrypt
+PyJWT
+python-dotenv
+flask-cors
