--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,32 @@
-# --- Stack Flask 2.x stabile per Py3.9 ---
-Flask==2.3.3
-Werkzeug==2.3.7
+pip==23.2.1
+setuptools==68.2.2
+wheel==0.41.2
+
+Flask==2.2.5
+Werkzeug==2.2.3
 Jinja2==3.1.4
 itsdangerous==2.1.2
 MarkupSafe==2.1.5
 click==8.1.7
 flask-cors==3.0.10
 
-# --- DB / Auth / JWT ---
-PyMySQL==1.1.1
+PyMySQL==1.0.3
 bcrypt==4.0.1
-PyJWT==2.9.0
-python-dotenv==1.0.1
-email-validator==2.2.0
-marshmallow==3.21.3
+PyJWT==2.6.0
+python-dotenv==0.21.1
+email-validator==1.3.1
+marshmallow==3.19.0
 
-# --- HTTP / immagini ---
-requests==2.32.3
-Pillow==10.4.0
+requests==2.31.0
+Pillow==9.5.0
 
-# --- Crypto / push ---
-cryptography==41.0.7
+cryptography==39.0.2
 pywebpush==1.14.0
 
-# --- Google (client + oauth) ---
-google-auth==2.35.0
-google-auth-oauthlib==1.2.0
-google-api-python-client==2.149.0
+google-auth==2.22.0
+google-auth-oauthlib==1.0.0
+google-api-python-client==2.100.0
 
-# --- Stripe ---
-stripe==5.6.0
+stripe==4.2.0
 
-# --- WSGI ---
 gunicorn==20.1.0
