--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,28 @@
 # SmartLife Organizer v4 - Apache Configuration
+# Passenger WSGI + React SPA routing
 
-# Passenger handles everything automatically via passenger_wsgi.py
-# No need for custom rewrite rules when using cPanel Python App
+# Enable rewrite engine
+RewriteEngine On
+
+# Passenger Configuration
+PassengerAppRoot "/home/ywrloefq/public_html/gm_v4"
+PassengerBaseURI "/gm_v4"
+PassengerPython "/home/ywrloefq/virtualenv/public_html/gm_v4/3.9/bin/python"
+
+# API requests → Passenger (Python backend)
+# Match any request starting with /gm_v4/api/
+RewriteCond %{REQUEST_URI} ^/gm_v4/api/ [NC]
+RewriteRule .* - [L]
+
+# Static files from frontend/dist → serve directly
+RewriteCond %{REQUEST_URI} ^/gm_v4/frontend/dist/
+RewriteRule .* - [L]
+
+# React SPA routing - redirect all other requests to index.html
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_URI} !^/gm_v4/api/
+RewriteRule ^(.*)$ /gm_v4/frontend/dist/index.html [L]
 
 # Disable directory browsing
 Options -Indexes
@@ -11,14 +32,12 @@ Options -Indexes
     Header set X-Content-Type-Options "nosniff"
     Header set X-Frame-Options "SAMEORIGIN"
     Header set X-XSS-Protection "1; mode=block"
+    
+    # CORS for API requests
+    Header always set Access-Control-Allow-Origin "*"
+    Header always set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
+    Header always set Access-Control-Allow-Headers "Content-Type, Authorization"
 </IfModule>
-
-# CORS headers for API
-<FilesMatch "\.(py)$">
-    Header set Access-Control-Allow-Origin "*"
-    Header set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
-    Header set Access-Control-Allow-Headers "Content-Type, Authorization"
-</FilesMatch>
 
 # Protect sensitive files
 <FilesMatch "^\.env$">
@@ -26,7 +45,7 @@ Options -Indexes
     Deny from all
 </FilesMatch>
 
-# Python files
+# Python files should be handled by Passenger
 <FilesMatch "\.py$">
     SetHandler None
 </FilesMatch>
