fix: Add frontend/dist files to repository for production deployment
- Remove dist/ from .gitignore
- Add built CSS, JS, and sourcemap files
- These files are required for production since we can't run npm build on cPanel

--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,7 @@ coverage/
 *.lcov
 
 # Build outputs
-dist/
+# dist/ - DISABLED: need to commit frontend/dist for production deployment
 build/
 out/
 .next/
